singleton example and multiprocessing pool example

--- a/advanced/multithreading.ipynb
+++ b/advanced/multithreading.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
    "source": [
     "%%file tpwrite.py\n",
     "from multiprocessing.pool import ThreadPool\n",
-    "import random\n",
+    "import random, threading\n",
     "import sys, time\n",
     "\n",
     "def cputask(*args):\n",
@@ -426,6 +426,70 @@
    ],
    "source": [
     "!time -p python pwrite.py 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting pool.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file pool.py\n",
+    "from multiprocessing import Pool\n",
+    "import time\n",
+    "\n",
+    "def f(x):\n",
+    "    return x*x\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    with Pool(processes=4) as pool:         # start 4 worker processes\n",
+    "        result = pool.apply_async(f, (10,)) # evaluate \"f(10)\" asynchronously in a single process\n",
+    "        print(result.get(timeout=1))        # prints \"100\" unless your computer is *very* slow\n",
+    "\n",
+    "        print(pool.map(f, range(10)))       # prints \"[0, 1, 4,..., 81]\"\n",
+    "\n",
+    "        it = pool.imap(f, range(10))\n",
+    "        print(next(it))                     # prints \"0\"\n",
+    "        print(next(it))                     # prints \"1\"\n",
+    "        print(it.next(timeout=1))           # prints \"4\" unless your computer is *very* slow\n",
+    "\n",
+    "        result = pool.apply_async(time.sleep, (10,))\n",
+    "        print(result.get(timeout=1))     # raises multiprocessing.TimeoutError"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n",
+      "0\n",
+      "1\n",
+      "4\n",
+      "Traceback (most recent call last):\n",
+      "  File \"pool.py\", line 20, in <module>\n",
+      "    print(result.get(timeout=1))     # raises multiprocessing.TimeoutError\n",
+      "  File \"/home/vikrant/usr/local/anaconda3/lib/python3.6/multiprocessing/pool.py\", line 604, in get\n",
+      "    raise TimeoutError\n",
+      "multiprocessing.context.TimeoutError\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python pool.py"
    ]
   },
   {
