--- a/advanced/Classes.ipynb
+++ b/advanced/Classes.ipynb
@@ -3053,6 +3053,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Singleton class ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Singleton(type):\n",
+    "    def __init__(self, *args, **kwargs):\n",
+    "        self.__instance = None\n",
+    "        super().__init__(*args, **kwargs)\n",
+    "        \n",
+    "    def __call__(self, *args, **kwargs):\n",
+    "        if self.__instance is None:\n",
+    "            self.__instance = super().__call__(*args, **kwargs)\n",
+    "            return self.__instance\n",
+    "        else:\n",
+    "            return self.__instance\n",
+    "\n",
+    "class Spam(metaclass=Singleton):\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        print('Creating Spam')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating Spam\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1 = Spam()\n",
+    "s2 = Spam()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1 is s2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Making nested modules ###"
    ]
   },
