added one example

--- a/foundation/Foundation1.ipynb
+++ b/foundation/Foundation1.ipynb
@@ -811,7 +811,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Python also supports speicial type **bytes** to represent binary data"
+    "Python also supports special type **bytes** to represent binary data"
    ]
   },
   {
@@ -1250,7 +1250,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#topten[3:7]"
@@ -1549,7 +1551,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#manyobjects[0:1]"
@@ -3363,12 +3367,18 @@
     "```\n",
     "head([\"python\",\"lisp\",\"haskell\",\"ark\",\"java\",\"ocamel\"], 3)\n",
     "['ark', 'haskell', 'java']\n",
+    "```\n",
+    "** Bonus problem **:\n",
+    "- write a function rearrangemax that takes an integer as an argument and returns a new integer with digits rearranged from max to min.\n",
+    "```\n",
+    "rearrangemax(43567)\n",
+    "76543\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -3379,7 +3389,12 @@
     "\n",
     "def head(words,n):\n",
     "    words.sort()\n",
-    "    return words[:n]"
+    "    return words[:n]\n",
+    "\n",
+    "def rearragemax(n):\n",
+    "    digits = str(n)\n",
+    "    sorteddigits = sorted(digits, key=int, reverse=True)\n",
+    "    return int(\"\".join(sorteddigits))"
    ]
   },
   {
