dictionary..few changes

--- a/foundation/Foundation3.ipynb
+++ b/foundation/Foundation3.ipynb
@@ -1305,94 +1305,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "grub_debian = {\n",
-    "    'GRUB_DEFAULT' :0,\n",
-    "    'GRUB_TIMEOUT' :5,\n",
-    "    'GRUB_DISTRIBUTOR' :\"`lsb_release -i -s 2> /dev/null || echo Debian`\",\n",
-    "    'GRUB_CMDLINE_LINUX_DEFAULT' :\"quiet splash modprob.blacklist=dw_dmac, dw_dmax_core\",\n",
-    "    'GRUB_CMDLINE_LINUX' : \"\"\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "grub_ubuntu ={\n",
-    "        'GRUB_DEFAULT' :0,\n",
-    "        'GRUB_HIDDEN_TIMEOUT_QUIET' :'true',\n",
-    "        'GRUB_TIMEOUT' :10,\n",
-    "        'GRUB_DISTRIBUTOR' :\"`lsb_release -i -s 2> /dev/null || echo Debian`\",\n",
-    "        'GRUB_CMDLINE_LINUX_DEFAULT' :\"quiet splash reboot=bios\",\n",
-    "        'GRUB_CMDLINE_LINUX' : \"\"\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "grub_config = {'debian':grub_debian,\n",
-    "               'ubuntu':grub_ubuntu\n",
-    "              }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'GRUB_CMDLINE_LINUX': '',\n",
-       " 'GRUB_CMDLINE_LINUX_DEFAULT': 'quiet splash modprob.blacklist=dw_dmac, dw_dmax_core',\n",
-       " 'GRUB_DEFAULT': 0,\n",
+       "{'GRUB_CMDLINE_LINUX': '\"\"',\n",
+       " 'GRUB_CMDLINE_LINUX_DEFAULT': '\"quiet splash\"',\n",
+       " 'GRUB_DEFAULT': '0',\n",
        " 'GRUB_DISTRIBUTOR': '`lsb_release -i -s 2> /dev/null || echo Debian`',\n",
-       " 'GRUB_TIMEOUT': 5}"
+       " 'GRUB_HIDDEN_TIMEOUT': '0',\n",
+       " 'GRUB_HIDDEN_TIMEOUT_QUIET': 'true',\n",
+       " 'GRUB_TIMEOUT': '10'}"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "grub_config['debian']"
+    "def parse_grub_conf(path):\n",
+    "    conf = {}\n",
+    "    for line in open(path):\n",
+    "        items = line.strip().split(\"=\")\n",
+    "        if line.startswith(\"#\") or line.strip()==\"\":\n",
+    "            continue\n",
+    "        key = items[0]\n",
+    "        value = \"=\".join(items[1:])\n",
+    "        conf[key] = value\n",
+    "    return conf\n",
+    "\n",
+    "grub_conf = parse_grub_conf(\"/etc/default/grub\")\n",
+    "grub_conf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'quiet splash modprob.blacklist=dw_dmac, dw_dmax_core'"
+       "'\"\"'"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "grub_config['debian']['GRUB_CMDLINE_LINUX_DEFAULT']"
+    "grub_conf['GRUB_CMDLINE_LINUX']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\"quiet splash\"'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grub_conf[\"GRUB_CMDLINE_LINUX_DEFAULT\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grub_conf[\"GRUB_DEFAULT\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'10'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grub_conf[\"GRUB_TIMEOUT\"]"
    ]
   },
   {
@@ -3675,18 +3701,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "import requests\n",
     "response = requests.post(\"http://httpbin.org/post\", data=\"Some data to be posted\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -3704,10 +3729,10 @@
       "    \"Connection\": \"close\", \n",
       "    \"Content-Length\": \"22\", \n",
       "    \"Host\": \"httpbin.org\", \n",
-      "    \"User-Agent\": \"python-requests/2.18.4\"\n",
+      "    \"User-Agent\": \"python-requests/2.14.2\"\n",
       "  }, \n",
       "  \"json\": null, \n",
-      "  \"origin\": \"49.248.169.20\", \n",
+      "  \"origin\": \"27.34.254.170\", \n",
       "  \"url\": \"http://httpbin.org/post\"\n",
       "}\n",
       "\n"
