adding practical python master files

--- a/practical_python_master/warmup.ipynb
+++ b/practical_python_master/warmup.ipynb
@@ -9,9 +9,12 @@
     "### dictionaries ###\n",
     "### loops and looping patterns ###\n",
     "### generators ###\n",
+    "### regex ###\n",
     "### Examples ###\n",
     " - Quicksort\n",
-    " - csv parser"
+    " - csv parser\n",
+    " - higher order functions max/sort\n",
+    " - "
    ]
   },
   {
@@ -40,7 +43,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
