archive files and file comparison

--- a/practical_python_master/files_folders.ipynb
+++ b/practical_python_master/files_folders.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -23,7 +23,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "os.mkdir(\"test\") #create directory"
@@ -54,7 +56,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "os.listdir(\".ipynb_checkpoints/\") #lists contents of directory"
@@ -74,7 +78,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "os.getcwd()"
@@ -83,7 +89,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "os.mkdir(\"test\")"
@@ -103,7 +111,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "os.getcwd()"
@@ -135,7 +145,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for path, dirs, files in os.walk(\".\"):\n",
@@ -146,7 +158,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "os.path.exists(\"hello.py\")"
@@ -155,7 +169,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "os.path.basename(\"../advanced/testing.ipynb\")"
@@ -164,7 +180,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "os.path.basename(\"/home/vikrant/programming\")"
@@ -173,7 +191,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "os.path.dirname(\"/home/vikrant/programming\")"
@@ -182,7 +202,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "os.path.isfile(\"hello.py\")"
@@ -191,7 +213,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "os.path.isfile(\"test/\")"
@@ -200,7 +224,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "os.path.isdir(\"test/\")"
@@ -216,7 +242,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "os.access(\"test/\", os.R_OK)"
@@ -237,28 +265,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "os.access(\"test/\", os.R_OK)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.access(\"test/\", os.W_OK)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.access(\"test/\", os.X_OK)"
    ]
   },
   {
@@ -269,13 +281,37 @@
    },
    "outputs": [],
    "source": [
-    "os.chmod(\"test/\",stat.S_IREAD)"
+    "os.access(\"test/\", os.W_OK)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "os.access(\"test/\", os.X_OK)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "os.chmod(\"test/\",stat.S_IREAD|stat.S_IEXEC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "!ls -ld test"
@@ -284,7 +320,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "os.lstat(\"test/\")"
@@ -293,7 +331,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "stat.S_IMODE(os.lstat(\"test/\").st_mode)"
@@ -308,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -329,7 +369,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dirtree(\".\")"
@@ -338,7 +380,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "os.path.getsize(\"./test/hello.py\")"
@@ -347,7 +391,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "os.path.getsize(\".\")"
@@ -356,7 +402,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for p,dirs,files in os.walk(\".\"):\n",
@@ -392,7 +440,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dirsize(\"../\")/1024/1024"
@@ -401,7 +451,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "os.path.getmtime(\"files_folders.ipynb\")"
@@ -421,7 +473,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "time.ctime(os.path.getmtime(\"files_folders.ipynb\"))"
@@ -429,9 +483,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/var/log/alternatives.log',\n",
+       " '/var/log/gpu-manager.log',\n",
+       " '/var/log/fontconfig.log',\n",
+       " '/var/log/repowerd.log',\n",
+       " '/var/log/dpkg.log',\n",
+       " '/var/log/apport.log',\n",
+       " '/var/log/kern.log',\n",
+       " '/var/log/auth.log',\n",
+       " '/var/log/boot.log',\n",
+       " '/var/log/bootstrap.log',\n",
+       " '/var/log/Xorg.0.log',\n",
+       " '/var/log/installer/casper.log',\n",
+       " '/var/log/apt/history.log',\n",
+       " '/var/log/apt/term.log',\n",
+       " '/var/log/lightdm/x-0.log',\n",
+       " '/var/log/lightdm/seat0-greeter.log',\n",
+       " '/var/log/lightdm/lightdm.log',\n",
+       " '/var/log/unattended-upgrades/unattended-upgrades.log',\n",
+       " '/var/log/unattended-upgrades/unattended-upgrades-shutdown.log',\n",
+       " '/var/log/unattended-upgrades/unattended-upgrades-dpkg.log']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def find(dirpath, ext=\"log\"):\n",
     "    for path, dirs, files in os.walk(dirpath):\n",
@@ -452,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -464,7 +548,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "shutil.copy(\"./test/hello.py\",\"/tmp/\")"
@@ -473,7 +559,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "os.path.exists(\"/tmp/hello.py\")"
@@ -482,7 +570,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "time.ctime(os.path.getmtime(\"/tmp/hello.py\"))"
@@ -491,7 +581,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "shutil.copy2(\"./test/hello.py\",\"/tmp/\")"
@@ -500,7 +592,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "time.ctime(os.path.getmtime(\"/tmp/hello.py\"))"
@@ -508,20 +602,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/tmp/tree2'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "shutil.copytree(\".\",\"/tmp/tree\")"
+    "shutil.copytree(\".\",\"/tmp/tree2\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dirtree(\"/tmp/tree/\")"
+    "import stat\n",
+    "os.chmod(\"./test/hello.py\",stat.S_IREAD)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|--/tmp/tree2/\n",
+      "| |--/tmp/tree2/test\n",
+      "| | |--hello.py\n",
+      "| |--outline.org\n",
+      "| |--external_applications.ipynb\n",
+      "| |--hello.py\n",
+      "| |--/tmp/tree2/.ipynb_checkpoints\n",
+      "| | |--warmup-checkpoint.ipynb\n",
+      "| | |--files_folders-checkpoint.ipynb\n",
+      "| |--files_folders.ipynb\n",
+      "| |--warmup.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "dirtree(\"/tmp/tree2/\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comparing files ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import filecmp\n",
+    "filecmp.cmp(\"./test/hello.py\" ,\"/tmp/tree2/hello.py\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['hello.py'], [], [])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filecmp.cmpfiles(\".\",\"/tmp/tree1\", common=[\"hello.py\"])"
    ]
   },
   {
@@ -534,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -545,10 +726,95 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['test.py', 'hello.py']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import fnmatch\n",
+    "fnmatch.filter([\"test.py\",\"hello.py\",\"abc.txt\"],\"*.py\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fnmatch.fnmatch(\"heelo.py\",\"h*.py\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Logging and Parsing log files ###"
+    "### Working with archives ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('bztar', \"bzip2'ed tar-file\"),\n",
+       " ('gztar', \"gzip'ed tar-file\"),\n",
+       " ('tar', 'uncompressed tar file'),\n",
+       " ('xztar', \"xz'ed tar-file\"),\n",
+       " ('zip', 'ZIP file')]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shutil.get_archive_formats()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/vikrant/programming/work/github/python-trainings/practical_python_master/X.zip'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shutil.make_archive(\"X\",\"zip\",root_dir=\"/tmp\")"
    ]
   },
   {
@@ -577,7 +843,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
